correction mobile

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -20,10 +20,6 @@
   padding: 0;
 }
 
-html {
-  font-size: 16px;
-}
-
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
