--- a/src/scss/modules/_title.scss
+++ b/src/scss/modules/_title.scss
@@ -43,7 +43,7 @@
     justify-content: space-between;
     align-items: center;
     align-self: stretch;
-    min-width: 250px;
+    min-width: 200px;
   }
 
   .title-beer-blond {
